--- a/templates/scholarships.html
+++ b/templates/scholarships.html
@@ -30,7 +30,7 @@
             <div class="card-header-row">
               <h5 class="fw-bold mb-0">{{ item.title }}</h5>
               {% if item.url %}
-                <a class="btn btn-outline-primary btn-sm" href="{{ item.url }}" target="_blank" rel="noopener">לקישור</a>
+                <a class="btn btn-outline-primary btn-sm scholarship-link" href="{{ item.url }}" target="_blank" rel="noopener">לעמוד המלגה</a>
               {% endif %}
             </div>
             {% if item.tags %}
