--- a/templates/scholarships.html
+++ b/templates/scholarships.html
@@ -25,7 +25,7 @@
     </div>
     <div class="scholarship-list">
       {% for item in scholarships %}
-        <div class="scholarship-card" data-search="{{ item.title }} {% if item.tags %}{{ item.tags|join(' ') }}{% endif %} {% if item.fields %}{{ item.fields|map(attribute='name')|join(' ') }} {{ item.fields|map(attribute='value')|join(' ') }}{% endif %}">
+        <div class="scholarship-card scholarship-card-media-layout" data-search="{{ item.title }} {% if item.tags %}{{ item.tags|join(' ') }}{% endif %} {% if item.fields %}{{ item.fields|map(attribute='name')|join(' ') }} {{ item.fields|map(attribute='value')|join(' ') }}{% endif %}">
           <div class="scholarship-card-body">
             <div class="card-header-row">
               <h5 class="fw-bold mb-0">{{ item.title }}</h5>
